Started including tuplespace semantics

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="step slide" data-rel-x="0" data-rel-y="900">
 
 <h1>Writing Fully-Concurrent Smart Contracts in Rholang</h1>
-<img src="images/RChainLogo.png" />
+<img class="right" src="images/RChainLogo.png" />
 <ul>
   <li>Joshy Orndorff</li>
   <li>RChain Cooperative</li>
@@ -46,8 +46,8 @@
 
 # Get Prepared
 
-* Download Cryptofex
-* Download RNode
+* Cryptofex IDE: [https://cryptofex.io/download/](https://cryptofex.io/download/)
+* RChain node (RNode): [https://github.com/rchain/rchain/releases/tag/v0.6.4](https://github.com/rchain/rchain/releases/tag/v0.6.4)
 * These Slides: [https://github.com/JoshOrndorff/SFBlockchainWeek-Presentation.git](https://github.com/JoshOrndorff/SFBlockchainWeek-Presentation.git)
 
 -----
@@ -70,20 +70,31 @@ Bottom line: Your agenda is my agenda
 * Casper Proof of Stake
 * Correct by Construction
 
------
+</div>
+<div class="step slide" data-rel-x="0" data-rel-y="900">
 
-# What's a Tuplespace?
+<h1>The Rho VM</h1>
 
-Stuff from Greg's boulder talk
-* Send, receive, comm event
-* Names and Processes
+<h2>BuildingBlocks</h2>
+<img src="images/buildingBlocks.png" />
 
------
+<h2>Sends and Receives</h2>
+<img src="images/send.png" />
+<img src="images/receive.png" />
 
-# Rholang Demonstration
+</div>
+<div class="step slide" data-rel-x="0" data-rel-y="900">
 
-Give out the cheat sheet
-## Examples
+<h1>Rholang Syntax</h1>
+Rholang expresses the Rho VM plus some conveniences.
+<img class="full" src="images/cheatSheet.png" style="height: 600px;" />
+
+
+</div>
+<div class="step slide markdown" data-rel-x="0" data-rel-y="900">
+
+# Write Some Rholang
+
 * Simple comm event
 * Powerbox
 * Contracts, Persistence
@@ -103,9 +114,10 @@ Like group learning? Come to my office hours!
   * Absolute value (`if` / `else`)
 * Intermediate
   * max / min (lists, recursion)
+  * factorial (recursion)
 * Expert
   * Binary search
-  *
+  * Patience Game
 
 </div>
 
@@ -161,7 +173,7 @@ Like group learning? Come to my office hours!
 
 </div>
 
-<div id="conference-branding"><img src="images/BlockChainWeekBranding.png" /></div>
+<div id="conference-branding"><img class="right" src="images/BlockChainWeekBranding.png" /></div>
 <div id="impress-help"></div>
 
 
