--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div id="impress" data-transition-duration="1000">
 
-<div class="step slide" data-rel-x="0" data-rel-y="900">
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
 
 <h1>Writing Fully-Concurrent Smart Contracts in Rholang</h1>
 <img class="right" src="images/RChainLogo.png" />
@@ -42,7 +42,7 @@
 </ul>
 
 </div>
-<div class="step slide markdown" data-rel-x="0" data-rel-y="900">
+<div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
 
 # Get Prepared
 
@@ -71,7 +71,7 @@ Bottom line: Your agenda is my agenda
 * Correct by Construction
 
 </div>
-<div class="step slide" data-rel-x="0" data-rel-y="900">
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
 
 <h1>The Rho VM</h1>
 
@@ -83,7 +83,21 @@ Bottom line: Your agenda is my agenda
 <img src="images/receive.png" />
 
 </div>
-<div class="step slide" data-rel-x="0" data-rel-y="900">
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
+<h1>Tuplespace Semantics</h1>
+<h2>Tuplespace</h2>
+<img src="images/send.png" />
+<img src="images/send.png" />
+<img src="images/send.png" />
+<img src="images/receive.png" />
+<img src="images/receive.png" />
+
+<h1>Process Pool</h1>
+<img src="images/process.png" />
+<img src="images/process.png" />
+
+</div>
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
 
 <h1>Rholang Syntax</h1>
 Rholang expresses the Rho VM plus some conveniences.
@@ -91,7 +105,7 @@ Rholang expresses the Rho VM plus some conveniences.
 
 
 </div>
-<div class="step slide markdown" data-rel-x="0" data-rel-y="900">
+<div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
 
 # Write Some Rholang
 
@@ -157,7 +171,7 @@ Like group learning? Come to my office hours!
   </ul>
 </div>
 
-<div class="step slide markdown" data-rel-x="0" data-rel-y="900">
+<div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
 # Stay Involved
 * [Join the coop](https://www.rchain.coop/community)
 * Chat in [discord](https://discord.gg/fvY8qhx)
