Added images for value adds, and QR code.

--- a/index.html
+++ b/index.html
@@ -43,15 +43,20 @@
 </ul>
 
 </div>
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
+
+<h1>Get Prepared</h1>
+
+<p>Cryptofex IDE: <a href="https://cryptofex.io/download/">https://cryptofex.io/download/</a></p>
+<p>RChain node (RNode): <a href="https://github.com/rchain/rchain/releases/tag/v0.6.4">https://github.com/rchain/rchain/releases/tag/v0.6.4</a></p>
+<p>Follow Along With These Slides:</p>
+
+<img class="right" src="images/theseSlides.png" />
+
+ <p><a href="https://joshorndorff.github.io/SFBlockchainWeek-Presentation/index.html">https://joshorndorff.github.io/SFBlockchainWeek-Presentation/index.html</a></p>
+
+</div>
 <div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
-
-# Get Prepared
-
-* Cryptofex IDE: [https://cryptofex.io/download/](https://cryptofex.io/download/)
-* RChain node (RNode): [https://github.com/rchain/rchain/releases/tag/v0.6.4](https://github.com/rchain/rchain/releases/tag/v0.6.4)
-* These Slides: [https://github.com/JoshOrndorff/SFBlockchainWeek-Presentation.git](https://github.com/JoshOrndorff/SFBlockchainWeek-Presentation.git)
-
------
 
 # Tentative Plan
 
@@ -62,16 +67,27 @@
 
 Bottom line: Your agenda is my agenda
 
------
-
-# RChain Value Adds
-
-* Concurrency
-* Scalability
-* Casper Proof of Stake
-* Correct by Construction
-
 </div>
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
+
+<h1>RChain Value Adds</h1>
+  <div id="value-adds">
+    <figure class="value-add">
+      <img src="images/concurrency.jpg" />
+      <figcaption>Concurrency</figcaption>
+    </figure>
+    <figure class="value-add">
+      <img src="images/qed.png" />
+      <figcaption>Correct By Construction</figcaption>
+    </figure>
+    <figure class="value-add">
+      <img src="images/casper.jpg" />
+      <figcaption>Proof of Stake</figcaption>
+    </figure>
+  </div>
+</div>
+
+
 <div class="step slide" data-rel-x="0" data-rel-y="1200">
 
   <h1>The Rho VM</h1>
@@ -123,6 +139,11 @@ Rholang expresses the Rho VM plus <del>some</del> several conveniences.
 
 </div>
 <div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
+# Names and Processes
+
+TODO
+
+-----
 
 # Write Some Rholang
 
@@ -163,10 +184,9 @@ Like group learning? Come to my office hours!
   <h2>Nth Caller Architecture</h2>
   <img class = "full" src="images/arch1.png" />
   <ul>
-    <li>How to set this up</li>
-    <li>Check out the code</li>
-    <li>Build it yourself!</li>
-    <li><a href="https://github.com/JoshOrndorff/nth-caller-game">https://github.com/JoshOrndorff/nth-caller-game</a></li>
+    <li>Demonstration</li>
+    <li>RChain-API: <a href="https://github.com/rchain/rchain-api">https://github.com/rchain/rchain-api</a></li>
+    <li>Build it yourself: <a href="https://github.com/JoshOrndorff/nth-caller-game">https://github.com/JoshOrndorff/nth-caller-game</a></li>
   </ul>
 </div>
 
@@ -181,7 +201,7 @@ Like group learning? Come to my office hours!
   <h2>RSign Browser Extension</h2>
   <img class = "full" src="images/arch2.png" />
   <ul>
-    <li>Make cyrptographic sigs easier for Dapp devs and users</li>
+    <li>Signatures easier for developers and users</li>
     <li>More realistic security model</li>
     <li>Still under active development</li>
     <li><a href="https://github.com/dckc/RSign">https://github.com/dckc/RSign</a></li>
@@ -190,15 +210,27 @@ Like group learning? Come to my office hours!
 
 <div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
 # Stay Involved
+## Commons
 * [Join the coop](https://www.rchain.coop/community)
 * Chat in [discord](https://discord.gg/fvY8qhx)
+* RChain [forum](https://forum.rchain.coop/)
+
+## Events
 * Attend my [office hours](https://zoom.us/j/6853551826)
-  Thursdays at 7:00 AM
+  Thursdays at 7:00 AM San Francisco time
+* Attend [Colab rholang sessions](https://zoom.us/j/6853551826)
+  Tuesdays at 1:00 PM San Francisco time
+* Attend [Colab RNode sessions](https://zoom.us/j/6853551826)
+  Thursdays at 1:00 PM San Francisco time
 
------
 
-# Open Lab Time
-* Continue rholang challenges
+</div>
+
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
+
+<h1>Open Lab Time</h1>
+
+<img id="final-logo" src="images/RChainLogo.png" />
 </div>
 
 
