Added figure for Channels and Processes.

--- a/index.html
+++ b/index.html
@@ -136,14 +136,16 @@ Bottom line: Your agenda is my agenda
 Rholang expresses the Rho VM plus <del>some</del> several conveniences.
 <img class="full" src="images/cheatSheet.png" style="height: 600px;" />
 
-
 </div>
+
+<div class="step slide" data-rel-x="0" data-rel-y="1200">
+<h1>Channels and Processes</h1>
+<img class="full" src="images/domainEquation.png" style="height: 600px;" />
+</div>
+
+
 <div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
-# Names and Processes
 
-TODO
-
------
 
 # Write Some Rholang
 
