Commiting stray details after the fact.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,29 @@
 <div class="step slide" data-rel-x="0" data-rel-y="1200">
 
 <h1>Get Prepared</h1>
+<div id="prep">
+  <div>
+    <h2>Cryptofex IDE</h2>
+    <a href="https://cryptofex.io/download/">https://cryptofex.io/download/</a>
 
-<p>Cryptofex IDE: <a href="https://cryptofex.io/download/">https://cryptofex.io/download/</a></p>
-<p>RChain node (RNode): <a href="https://github.com/rchain/rchain/releases/tag/v0.6.4">https://github.com/rchain/rchain/releases/tag/v0.6.4</a></p>
-<p>Follow Along With These Slides:</p>
+    <h2>RChain node (RNode)</h2><a href="https://github.com/rchain/rchain/releases/tag/v0.6.4">https://github.com/rchain/rchain/releases/tag/v0.6.4</a>
 
-<img class="right" src="images/theseSlides.png" />
+    <h2>Rchain.cloud</h2>
+    <p>Main site: <a href="https://rchain.cloud">https://rchain.cloud</a></p>
+    <p>Mirror: <a href="rchaincloud.inblock.io">rchaincloud.inblock.io</a></p>
+    <p>Host your own: <a href="https://youtu.be/_Jzl9WqfMrQ">https://youtu.be/_Jzl9WqfMrQ</a></p>
+  </div>
 
- <p><a href="https://joshorndorff.github.io/SFBlockchainWeek-Presentation/index.html">https://joshorndorff.github.io/SFBlockchainWeek-Presentation/index.html</a></p>
+  <div>
+    <h2>Follow These Slides:</h2>
+    <img style="margin-left: 120px;" src="images/theseSlides.png" />
+
+     <p><a href="https://joshorndorff.github.io/SFBlockchainWeek-Presentation/index.html">https://joshorndorff.github.io/SFBlockchainWeek-Presentation/index.html</a></p>
+  </div>
+</div>
+
+
+
 
 </div>
 <div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
