--- a/index.html
+++ b/index.html
@@ -113,13 +113,24 @@
 
 <div class="step slide" id="compilation" data-rel-x="0" data-rel-y="1200">
 <h1>Compilation Steps</h1>
-install dependencies
-install rustup
-scripts/init.sh
-cargo build --release
+<ul>
+  <li>Install system dependencies
+    <ul>
+      <li><code>sudo apt install cmake pkg-config libssl-dev git clang libclang-dev</code></li>
+      <li><code>brew install cmake pkg-config openssl git llvm</code></li>
+    </ul>
+  </li>
+  <li><code>curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh</code></li>
+  <li><code>git clone https://github.com/substrate-developer-hub/substrate-node-template</code></li>
+  <li><code>cd substrate</code></li>
+  <li><code>scripts/init.sh</code></li>
+  <li><code>cargo build --release</code></li>
+</ul>
+
+Detailed <a href="https://github.com/paritytech/substrate/#612-windows">Windows instructions</a> from Substrate Readme.
 </div>
 
-<div class="step slide" data-rel-x="0" data-rel-y="1200">
+<div class="step slide" id="like-git" data-rel-x="0" data-rel-y="1200">
 <h1>Blockchain is like Git</h1>
 <p>In the meantime, let's talk about how blockchain works.</p>
 <p>Problem: Social coordination</p>
@@ -132,106 +143,56 @@ cargo build --release
 </div>
 
 <div class="step slide" id="keygen" data-rel-x="0" data-rel-y="1200">
-<h1>Let's generate some keys</h1>
-<button id="generate">Generate</button>
-<textarea id="output"></textarea>
+  <h1>Let's generate some keys</h1>
+  <button id="generate">Generate</button>
+  <textarea id="output"></textarea>
 </div>
 
-<div class="step slide" data-rel-x="0" data-rel-y="1200">
-<h1>Channels and Processes</h1>
-<img class="full" src="images/domainEquation.png" style="height: 600px;" />
-</div>
-
-
-<div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
-
-
-# Write Some Rholang
-
-* Simple comm event
-* Powerbox
-* Contracts, Persistence
-* Unforgeable names
-
-Like group learning? Come to my office hours!
-
------
-
-# Rholang Exercises
-* Tutorial is a great place to start
-  * Website version: [https://www.rchain.coop/learn-rholang](https://www.rchain.coop/learn-rholang)
-  * Github version: [http://guthub.com/joshorndorff/LearnRholangByExample](http://guthub.com/joshorndorff/LearnRholangByExample)
-* Beginner
-  * Number doubler (Arithmetic)
-  * Hello user (String operations)
-  * Absolute value (`if` / `else`)
-* Intermediate
-  * max / min (lists, recursion)
-  * factorial (recursion)
-* Expert
-  * Binary search
-  * Patience Game
-
-</div>
-
-<div class="step">
-  <h2>Nth Caller Dapp</h2>
-  <img class = "full" src="images/radio.jpg" />
-  <p>Call in now, 10th caller wins concert tickets!</p>
+<div class="step slide" id="add-module" data-rel-x="0" data-rel-y="1200">
+<h1>Add Tic Tac Toe Module</h1>
+Cargo.toml -- dependency and /std
+lib.rs -- impl trait and costruct_runtime
+bump spec version
 </div>
 
 
-<div class = "step">
-  <h2>Nth Caller Architecture</h2>
-  <img class = "full" src="images/arch1.png" />
+<div class="step slide" id="upgrade" data-rel-x="0" data-rel-y="1200">
+  <h1>Perform a Runtime Upgrade</h1>
+  Image of doing the upgrade in apps
+
   <ul>
-    <li>Demonstration</li>
-    <li>RChain-API: <a href="https://github.com/rchain/rchain-api">https://github.com/rchain/rchain-api</a></li>
-    <li>Build it yourself: <a href="https://github.com/JoshOrndorff/nth-caller-game">https://github.com/JoshOrndorff/nth-caller-game</a></li>
+    <li><a href="https://bootnodes.net/tictactoe">Hosted interface</a></li>
+    <li><a href="https://github.com/JoshOrndorff/TicTacToe-frontend">Interface repository</a></li>
+    <li><a href="https://github.com/JoshOrndorff/TicTacToe">Runtime module repository</a></li>
   </ul>
-</div>
-
-<div class="step">
-  <h2>Status Dapp</h2>
-  <img class = "full" src="images/facebook.png" />
-  <p>Greg M: We need to reboot social media, and express sentiment on-chain</p>
-  <p>(Name registry coming this week!)</p>
-</div>
-
-<div class="step">
-  <h2>RSign Browser Extension</h2>
-  <img class = "full" src="images/arch2.png" />
-  <ul>
-    <li>Signatures easier for developers and users</li>
-    <li>More realistic security model</li>
-    <li>Still under active development</li>
-    <li><a href="https://github.com/dckc/RSign">https://github.com/dckc/RSign</a></li>
-  </ul>
-</div>
-
-<div class="step slide markdown" data-rel-x="0" data-rel-y="1200">
-# Stay Involved
-## Commons
-* [Join the coop](https://www.rchain.coop/community)
-* Chat in [discord](https://discord.gg/fvY8qhx)
-* RChain [forum](https://forum.rchain.coop/)
-
-## Events
-* Attend my [office hours](https://zoom.us/j/6853551826)
-  Thursdays at 7:00 AM San Francisco time
-* Attend [Colab rholang sessions](https://zoom.us/j/6853551826)
-  Tuesdays at 1:00 PM San Francisco time
-* Attend [Colab RNode sessions](https://zoom.us/j/6853551826)
-  Thursdays at 1:00 PM San Francisco time
-
 
 </div>
 
-<div class="step slide" data-rel-x="0" data-rel-y="1200">
+<div class="step slide" id="remove-module" data-rel-x="0" data-rel-y="1200">
+<h1>Remove Sudo Module</h1>
+Cargo.toml -- dependency and /std
+lib.rs -- impl trait and costruct_runtime
+bump spec version
 
-<h1>Open Lab Time</h1>
+Upgrade same as before
+No special interface this time
+</div>
 
-<img id="final-logo" src="images/RChainLogo.png" />
+<div class="step slide" id="poe" data-rel-x="0" data-rel-y="1200">
+<h1>Custom Proof of Existence Module</h1>
+</div>
+
+
+<div class="step parting" id="hiring" data-rel-x="0" data-rel-y="1200">
+  <h1>We're Hiring</h1>
+  <div class="pink-box"></div>
+  <p><a href="https://parity.io/jobs">parity.io/jobs</a></p>
+</div>
+
+<div class="step parting" id="newsletter" data-rel-x="0" data-rel-y="1200">
+  <h1>Parity Events and Updates</h1>
+  <div class="pink-box"></div>
+  <p><a href="https://parity.io/newsletter">parity.io/newsletter</a></p>
 </div>
 
 
@@ -242,11 +203,10 @@ Like group learning? Come to my office hours!
 
 
 <!-- Extra modules
-     Load highlight.js, mermaid.js and markdown.js from extras.
+     Load highlight.js, mermaid.js ~~and markdown.js~~ from extras.
      See also src/plugins/extras/extras.js -->
 <script type="text/javascript" src="impress.js/extras/highlight/highlight.pack.js"></script>
-<script type="text/javascript" src="impress.js/extras/mermaid/mermaid.min.js"></script>
-<script type="text/javascript" src="impress.js/extras/markdown/markdown.js"></script>
+<script type="text/javascript" src="impress.js/extras/mermaid/mermaid.min.js"></script></script>
 
 <!--
     To make all described above really work, you need to include impress.js in the page.
@@ -260,11 +220,5 @@ Like group learning? Come to my office hours!
 My own addition to get the key generation working.
 -->
 <script type="text/javascript" src="keygen-bundle.js"></script>
-<script type="text/javascript">
-  console.log(util); //TODO delete this debugging line
-  document.getElementById("generate").addEventListener("click", () => {
-    alert("clicked");
-  });
-</script>
 </body>
 </html>
