--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 
 <h1>Write a Blockchain Runtime with Parity Substrate</h1>
 <div class="pink-box"></div>
-<ul>
+<ul id="first">
   <li>Joshy Orndorff</li>
   <li>Parity Technologies</li>
   <li>18 October 2019</li>
+</ul>
+<ul id="second">
+  <li>joshy@parity.io</li>
+  <li>github.com/JoshOrndorff</li>
 </ul>
 
 </div>
@@ -142,44 +146,97 @@ Detailed <a href="https://github.com/paritytech/substrate/#612-windows">Windows 
 </p>
 </div>
 
+<!--
+This is the beginning of an attempt to generate keys in-browser like Shawn suggested. I couldn't get the output to match subkey.
+
 <div class="step slide" id="keygen" data-rel-x="0" data-rel-y="1200">
-  <h1>Let's generate some keys</h1>
+  <h1>Generate Keys</h1>
   <button id="generate">Generate</button>
   <textarea id="output"></textarea>
+  Post your key here:
 </div>
+-->
+
+<div class="step slide" id="keygen" data-rel-x="0" data-rel-y="1200">
+  <h1>Generate Two Keys</h1>
+  <ul>
+    <li>sr25519 for Babe block production</li>
+    <li>ed25519 for Grandpa finalization</li>
+  </ul>
+  <img src="images/apps-keygen.png"/>
+  <p><a href="https://github.com/JoshOrndorff/RustBeltRust-2019/issues/1">Share your addresses</a>, and REMEMBER YOUR PHRASES!</p>
+</div>
+
+
+<div class="step slide" id="join" data-rel-x="0" data-rel-y="1200">
+  <h1>Join the Network</h1>
+  <p>Download the <a href="https://gist.github.com/JoshOrndorff/4eee4e7207a9934b26a697dd9fc2dfea">chainspec file</a>.</p>
+  <p>
+<pre><code>
+./target/release/node-template \
+  --chain=customSpecRaw.json \
+  --validator \
+  --name YOURNAME \
+  --telemetry-url ws://telemetry.polkadot.io:1024
+</code></pre>
+  </p>
+  <p>RPC your key into the node at Apps &gt; Toolbox &gt; RPC Calls &gt; author &gt; insertKey</p>
+  <img src="images/apps-insertKey.png" />
+</div>
+
 
 <div class="step slide" id="add-module" data-rel-x="0" data-rel-y="1200">
 <h1>Add Tic Tac Toe Module</h1>
-Cargo.toml -- dependency and /std
-lib.rs -- impl trait and costruct_runtime
-bump spec version
+<ul>
+  <li>Update Code
+    <ul>
+      <li>Cargo.toml -- dependency, std feature</li>
+      <li>lib.rs -- impl trait, costruct_runtime, bump spec version</li>
+    </ul>
+  </li>
+  <li>Recompile&nbsp;&nbsp;&nbsp;&nbsp; <code>cargo build --release</code></li>
+  <li>View the <a href="https://github.com/substrate-developer-hub/substrate-node-template/commit/74063caea4ff067c0c434c3271cdcd348c7ee5d1">solution</a></li>
+</ul>
+
 </div>
 
 
 <div class="step slide" id="upgrade" data-rel-x="0" data-rel-y="1200">
   <h1>Perform a Runtime Upgrade</h1>
-  Image of doing the upgrade in apps
+  <img src="images/apps-upgrade.png" />
 
   <ul>
     <li><a href="https://bootnodes.net/tictactoe">Hosted interface</a></li>
     <li><a href="https://github.com/JoshOrndorff/TicTacToe-frontend">Interface repository</a></li>
     <li><a href="https://github.com/JoshOrndorff/TicTacToe">Runtime module repository</a></li>
+    <li>Necessary <a href="https://github.com/JoshOrndorff/TicTacToe-frontend/blob/master/src/types.json">type declarations</a></li>
   </ul>
 
 </div>
 
 <div class="step slide" id="remove-module" data-rel-x="0" data-rel-y="1200">
 <h1>Remove Sudo Module</h1>
-Cargo.toml -- dependency and /std
-lib.rs -- impl trait and costruct_runtime
-bump spec version
+<ul>
+  <li>Update Code
+    <ul>
+      <li>Cargo.toml -- dependency, std feature</li>
+      <li>lib.rs -- impl trait, costruct_runtime, bump spec version</li>
+      <li>chain_spec.rs -- config and import</li>
+    </ul>
+  </li>
+  <li>Recompile&nbsp;&nbsp;&nbsp;&nbsp; <code>cargo build --release</code></li>
+  <li>View the <a href="https://github.com/substrate-developer-hub/substrate-node-template/commit/e57ebe4b39f7c7cc8616a7776a62df59040725d2">solution</a></li>
+</ul>
 
-Upgrade same as before
-No special interface this time
+<p>Upgrade same as before</p>
+<p>No special interface this time</p>
 </div>
 
 <div class="step slide" id="poe" data-rel-x="0" data-rel-y="1200">
 <h1>Custom Proof of Existence Module</h1>
+<p>Proof of Existence is ...</p>
+
+<p>Roughly following <a href="https://substrate.dev/docs/en/next/tutorials/creating-your-first-substrate-chain/">this tutorial</a>.</p>
 </div>
 
 
@@ -190,7 +247,7 @@ No special interface this time
 </div>
 
 <div class="step parting" id="newsletter" data-rel-x="0" data-rel-y="1200">
-  <h1>Parity Events and Updates</h1>
+  <h1>Events and Updates</h1>
   <div class="pink-box"></div>
   <p><a href="https://parity.io/newsletter">parity.io/newsletter</a></p>
 </div>
