Clean up git slide

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
   <li>joshy@parity.io</li>
   <li>github.com/JoshOrndorff</li>
 </ul>
+<div class="notes">
+  My goal is to teach you about blockchains written in rust.
+  Used to be a teacher
+  Now work at Parity
+  Not much rust experience
+</div>
 
 </div>
 
@@ -144,6 +150,8 @@ Detailed <a href="https://github.com/paritytech/substrate/#612-windows">Windows 
     <li>Shared History</li>
   </ul>
 </p>
+<img id="blocks" src="images/blocks.png" />
+<img id="chain" src="images/chain.png" />
 </div>
 
 <!--
@@ -180,7 +188,7 @@ This is the beginning of an attempt to generate keys in-browser like Shawn sugge
   --telemetry-url ws://telemetry.polkadot.io:1024
 </code></pre>
   </p>
-  <p>RPC your key into the node at Apps &gt; Toolbox &gt; RPC Calls &gt; author &gt; insertKey</p>
+  <p>Apps &gt; Toolbox &gt; RPC Calls &gt; author &gt; insertKey</p>
   <img src="images/apps-insertKey.png" />
 </div>
 
