--- a/index.html
+++ b/index.html
@@ -241,9 +241,10 @@ This is the beginning of an attempt to generate keys in-browser like Shawn sugge
 
 <div class="step slide" id="poe" data-rel-x="0" data-rel-y="1200">
 <h1>Custom Proof of Existence Module</h1>
-<p>Proof of Existence is ...</p>
-
-<p>Roughly following <a href="https://substrate.dev/docs/en/next/tutorials/creating-your-first-substrate-chain/">this tutorial</a>.</p>
+<p>Proof of Existence == Timestamped Notary Service</p>
+<p>Certify any file Trustlessly</p>
+<p>Roughly following <a href="https://substrate.dev/docs/en/next/tutorials/creating-your-first-substrate-chain/build">this tutorial</a></p>
+<p>Lots more to learn at <a href="https://substrate.dev">substrate.dev</a></p>
 </div>
 
 
