Clean webapp slide

--- a/index.html
+++ b/index.html
@@ -68,17 +68,23 @@
 <div class="step slide" id="web-app" data-rel-x="0" data-rel-y="1200">
 
 <h1>Play with a Web App</h1>
-  <h2>Try the <a href="https://bootnodes.net/substrate-front-end-template">hosted frontend</a></h2>
-
   <ul>
+    <li>Try the <a href="https://bootnodes.net/substrate-front-end-template">hosted frontend</a></li>
     <li>Template for rapid UI development</li>
-    <li>Github project <a href="https://github.com/substrate-developer-hub/substrate-front-end-template/">https://github.com/substrate-developer-hub/substrate-front-end-template/</a></li>
+    <li>Github <a href="https://github.com/substrate-developer-hub/substrate-front-end-template/">repository</a></li>
   </ul>
 
   <h2>Apps: A Multimeter for Substrate</h2>
   <ul>
     <li>Hosted at <a href="https://polkadot.js.org/apps/">https://polkadot.js.org/apps/</a></li>
-    <li>Github project <a href="https://github.com/polkadot-js/apps">https://github.com/polkadot-js/apps</a></li>
+    <li>Github <a href="https://github.com/polkadot-js/apps">repository</a></li>
+  </ul>
+
+  <h2>Bonus: Browser Extension</h2>
+  <ul>
+    <li>Github <a href="https://github.com/polkadot-js/extension">repository</a></li>
+    <li>Download from <a href="https://addons.mozilla.org/en-US/firefox/addon/polkadot-js-extension/">addons.mozilla.org</a></li>
+    <li>Download from <a href="https://chrome.google.com/webstore/detail/polkadot%7Bjs%7D-extension/mopnmbcafieddcagagdcbnhejhlodfdd">chrome web store</a></li>
   </ul>
 
   <img src="images/multimeter.png" />
